--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ejs": "^3.1.9"
   }
 }
